--- a/Introducao-Angular/1/Aula1/src/app/itens/navbar/up/up.component.html
+++ b/Introducao-Angular/1/Aula1/src/app/itens/navbar/up/up.component.html
@@ -7,11 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" routerLink="/">Aula 1 - Angular</a>
+      <a class="navbar-brand" routerLink="/"><img src="../../../assets/img/favicon.png" width="22px" height="22px" align="left">&nbsp; Aula 1 - Angular</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/perfil">Perfil</a></li>
+        <li><a routerLink="/user/perfil">Perfil</a></li>
       </ul>
     </div>
   </div>
