Introdução Angular - Aula 1 (User busca e create e remove complete)

--- a/Introducao-Angular/1/Aula1/src/app/pages/user/create/create.component.html
+++ b/Introducao-Angular/1/Aula1/src/app/pages/user/create/create.component.html
@@ -3,7 +3,7 @@
 
 <hr>
 
-<div id="respostaForm"></div>
+<div [innerHtml]="respostaHTML"></div>
 
 <div class="container-fluid">
   <form (ngSubmit)="submitCreateUser()">
